<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

  <Button
      android:id="@+id/back_register"
      android:layout_width="88dp"
      android:layout_height="38dp"
      android:layout_marginStart="2dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="321dp"
      android:layout_marginBottom="13dp"
      android:backgroundTint="@color/white"
      android:text="@string/back"
      android:textColor="#5199BA"
      app:cornerRadius="20dp"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
      android:background="#00000000"/>

  <Button
      android:id="@+id/button3"
      android:layout_width="360dp"
      android:layout_height="55dp"
      android:backgroundTint="#5199BA"
      android:text="@string/btnCont"
      app:cornerRadius="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.509"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
      app:layout_constraintVertical_bias="0.355"
      tools:ignore="TextContrastCheck" />

  <EditText
      android:id="@+id/editTextTextEmailAddress3"
      android:layout_width="360dp"
      android:layout_height="35dp"
      android:background="#E6E6E6"
      android:backgroundTint="#E6E6E6"
      android:ems="10"
      android:hint="@string/email_indent"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
      app:layout_constraintVertical_bias="0.555"
      tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/editTextTextPassword2"
      android:layout_width="360dp"
      android:layout_height="35dp"
      android:background="#E6E6E6"
      android:backgroundTint="#E6E6E6"
      android:ems="10"
      android:hint="@string/password_indent"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:labelFor="@id/editTextTextPassword"
      app:layout_constraintBottom_toTopOf="@+id/switch1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.509"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
      app:layout_constraintVertical_bias="0.736"
      app:passwordToggleEnabled="true"
      tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

  <EditText
      android:id="@+id/editTextTextPersonName"
      android:layout_width="360dp"
      android:layout_height="35dp"
      android:background="#E6E6E6"
      android:backgroundTint="#E6E6E6"
      android:ems="10"
      android:hint="@string/first_name_indent"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.509"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.096"
      tools:ignore="TouchTargetSizeCheck" />

  <Switch
      android:id="@+id/switch1"
      android:layout_width="360dp"
      android:layout_height="35dp"
      android:text="@string/terms"
      app:layout_constraintBottom_toTopOf="@+id/switch2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.509"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
      app:layout_constraintVertical_bias="0.936"
      tools:ignore="TouchTargetSizeCheck" />

  <Switch
      android:id="@+id/switch2"
      android:layout_width="360dp"
      android:layout_height="35dp"
      android:text="@string/privacy"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.509"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
      app:layout_constraintVertical_bias="0.952"
      tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>