<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start">

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="84dp"
      android:layout_height="76dp"
      android:contentDescription="@string/logo"
      android:src="@drawable/clue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"
      app:layout_constraintVertical_bias="0.03"
      tools:ignore="ImageContrastCheck"
      tools:srcCompat="@tools:sample/avatars" />

  <Button
      android:id="@+id/login_button"
      android:layout_width="360dp"
      android:layout_height="55dp"
      android:backgroundTint="@color/white"
      android:text="@string/acc"
      android:textColor="#5199BA"
      app:cornerRadius="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_button"
      app:layout_constraintVertical_bias="0.179"
      tools:ignore="TextContrastCheck"
      android:background="#00000000"/>

  <Button
      android:id="@+id/register_button"
      android:layout_width="360dp"
      android:layout_height="55dp"
      android:backgroundTint="#5199BA"
      android:text="@string/start"
      app:cornerRadius="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.49"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.853"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="200dp"
      android:layout_height="40dp"
      android:text="@string/welcome_to_clue"
      android:textColor="@color/black"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.137" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="253dp"
      android:layout_height="223dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/startimg"
      android:src="@drawable/start_image"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3"
      app:layout_constraintVertical_bias="0.0"
      tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>