<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <Button
        android:id="@+id/back_login"
        android:layout_width="88dp"
        android:layout_height="38dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="136dp"
        android:background="#00000000"
        android:backgroundTint="@color/white"
        android:shadowColor="@color/white"
        android:text="@string/back"
        android:textColor="#5199BA"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:backgroundTint="#5199BA"
        android:text="@string/btnCont"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.652"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="84dp"
        android:layout_height="76dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/clue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="360dp"
        android:layout_height="35dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="21dp"
        android:background="#E6E6E6"
        android:backgroundTint="#E6E6E6"
        android:ems="10"
        android:hint="@string/pswd_indent"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/editTextTextPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:passwordToggleEnabled="true"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="360dp"
        android:layout_height="35dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="13dp"
        android:background="#E6E6E6"
        android:backgroundTint="#E6E6E6"
        android:ems="10"
        android:hint="@string/email_indent"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>